--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="form-group">
                 <label for="website">Website URL</label>
                 <input type="url" id="website" placeholder="http://example.com" required name="website">
+
             </div>
             <!-- Password -->
             <div class="form-group">
@@ -46,7 +47,7 @@
             <!-- Confirm Password -->
             <div class="form-group">
                 <label for="password2">Confirm Password</label>
-                <input type="password" id="password2" placeholder="Confirm Password" required
+                <input type="password" id="password2" placeholder="Confirm Password" required name="password"
                     pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$">
             </div>
             <button type='submit'>Register</button>
